# inky-digital-frame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_web_packed_fs.sh  flash.sh  packed_fs.c  wifi_config.cmake.sample
.github/workflows/: cmake.yml
pack_src/: CMakeLists.txt
src/: inky_frame_manager.cpp  main.cpp  packed_fs.c
src/include/: .gitignore  FreeRTOSConfig.h  inky_frame_manager.hpp  lwipopts.h  web_server.hpp  wifi.hpp.sample
src/mongoose/include/: mongoose_config.h
src/web_server/: CMakeLists.txt  web_server.cpp
web_src/: index.html  package-lock.json  package.json  tailwind.config.js
web_src/src/: App.svelte
web_src/src/lib/: ImageCropper.svelte  ImageData.js  ImageUpload.svelte
